feat(corr): add new correlation endpoints #152
